// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`+++capturing Snapshot of TextInput 1`] = `
<div
  className="token test"
>
  <div
    className="dp-code label"
  >
    user-message
    :
  </div>
  <span
    className="value"
    onClick={[Function]}
  >
    help upgrading
  </span>
  <div
    className="token-remove remove"
    onClick={[Function]}
  >
    X
  </div>
</div>
`;

exports[`+++capturing Snapshot of TextInput with empty value 1`] = `
<div
  className="token test"
>
  <div
    className="dp-code label"
  >
    user-message
    :
  </div>
  <span
    className="value"
    onClick={[Function]}
  >
    ________
  </span>
  <div
    className="token-remove remove"
    onClick={[Function]}
  >
    X
  </div>
</div>
`;
